--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".addAlarmActivity"></activity>
+        <receiver android:name=".AlarmOperations"
+            android:enabled="true"
+            />
+
     </application>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
