--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -36,6 +38,8 @@
         <activity android:name=".SettingsActivity" />
         <activity android:name=".AboutActivity"></activity>
 
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_place_api"></meta-data>
 
     </application>
 
