--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.nbsp:library:1.8'
     compile 'com.google.android.gms:play-services:11.8.0'
+    compile 'com.android.volley:volley:1.1.0'
 }
